Version 1.0.2
---------------------------------------------------------------------------
30 May 2008
+ Removed htaccess file. Now expect core/inc/htaccess.

Version 1.0.1
---------------------------------------------------------------------------
8 April 2008
+ Fixed Access option not appearing on MiniAdmin
+ .html completely removed from shortcuts

Version 1.0.0
---------------------------------------------------------------------------
10 March 2008
+ Removed .html suffix to shortcuts.

5 March 2008
+ Fixed include missing from access for shortcuts
+ Fixed shortcut code

22 February 2008
+ New functions added:
  o isDenied - returns true or false depending on if an ip is denied
  o addIP - static method of adding a deny or allow ip
  o removeIP - static method of removing an ip
+ Italian translations

19 February 2008
+ Rewritten to work with new url rewriting scheme
+ .htaccess writing functions removed
+ allow/deny moved into module
+ Admin tab removed
+ Access now a core module

+ Updated: templates/forms/allow_deny.tpl, template/forms/shortcut_list.tpl

Version 0.2.3 -- 25 July 2007
-----------------------------------------------------------------------------------
25 July 2007
+ Fixed bug #1690698: Cannot create a new .htaccess file if original
  is deleted. Thanks singletrack
+ Fixed bug #1690544: If the .htaccess file is not writable or
  missing, give the user a warning message.

8 June 2007
+ Locale file updated.


Version 0.2.2 -- 17 May 2007
------------------------------------------------------------------------------------
+ The default rewrite conditional was missing a file check.
+ Previous update had updated files going to incorrect directory.
+ Template was removing curly brackets from review mode. Fixed.


Version 0.2.1
------------------------------------------------------------------------------------
4 April 2007
+ Changed to new language format.

Version 0.2.0