@@ -1,0 +1,7 @@
+<div style="border : 1px solid black; padding : 5px">
+<pre>
+{CURRENT_HTACCESS}
+</pre>
+</div>
+<p>{BASE_FOUND}</p>
+<p>{OPTION}</p>
